[gd_scene load_steps=8 format=3 uid="uid://dn1jcybkyi5bh"]

[ext_resource type="Script" uid="uid://ck4dpq2fryec2" path="res://tower/tower.gd" id="1_3fjlj"]
[ext_resource type="Texture2D" uid="uid://4ax48s4httmv" path="res://common/pixel.png" id="2_xnej4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kqu6x"]
size = Vector2(304, 304)

[sub_resource type="Animation" id="Animation_g1dw6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_rkbax"]
resource_name = "idle"
length = 0.5
loop_mode = 2
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 0.95)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_yw30f"]
resource_name = "move"
length = 0.5
loop_mode = 2
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.0872665, 0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qjkh3"]
_data = {
&"RESET": SubResource("Animation_g1dw6"),
&"idle": SubResource("Animation_rkbax"),
&"move": SubResource("Animation_yw30f")
}

[node name="Tower" type="Area2D"]
collision_layer = 16
script = ExtResource("1_3fjlj")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Outline" type="Sprite2D" parent="Sprite2D"]
visible = false
scale = Vector2(320, 320)
texture = ExtResource("2_xnej4")

[node name="Pixel" type="Sprite2D" parent="Sprite2D"]
scale = Vector2(300, 300)
texture = ExtResource("2_xnej4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kqu6x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qjkh3")
}
autoplay = "idle"
playback_auto_capture_transition_type = 5
playback_default_blend_time = 0.2

[node name="Label" type="Label" parent="."]
offset_left = -152.0
offset_top = -192.0
offset_right = 150.0
offset_bottom = -169.0
text = "Feed me my COLOR!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelInteract" type="Label" parent="."]
visible = false
offset_left = -150.0
offset_top = 168.0
offset_right = 152.0
offset_bottom = 191.0
text = "Press [SPACE] to Interact!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
